changed typography dir and font dir - mixin for font import

--- a/frontend/src/sass/index.html
+++ b/frontend/src/sass/index.html
@@ -19,5 +19,6 @@
     <p class="fn">Footnote</p>
     <p class="c1">Caption 1</p>
     <p class="c2">Caption 2</p>
+    <button class="btn">Go for it</button>
   </body>
 </html>
