BG Gadient sett for login page

--- a/frontend/src/sass/index.html
+++ b/frontend/src/sass/index.html
@@ -7,8 +7,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>ChatApp</title>
   </head>
-  <body>
-
-    
+  <body class="login">
+    <div class="gr-to-left">
+      <div class="gr-to-top">
+        <div class="right">.</div>
+      </div>
+    </div>
   </body>
 </html>
